último update antes da migração de repo

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,38 +18,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%capture\n",
-    "%pip install pandas matplotlib numpy pyspark"
+    "from common_imports import *"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import warnings\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "import matplotlib.ticker as mticker\n",
-    "from datetime import datetime, timedelta\n",
-    "from pyspark.conf import SparkConf\n",
-    "from pyspark.sql import SparkSession, DataFrame\n",
-    "from pyspark.sql.types import DecimalType, DoubleType\n",
-    "from pyspark.sql.functions import regexp_replace, to_date, col, trim, substring, when, mean, format_number\n",
-    "\n",
-    "warnings.simplefilter(action='ignore', category=FutureWarning)\n",
-    "pd.options.display.float_format = '{:.2f}'.format"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,18 +50,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "spark.stop()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 51,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "24/10/04 10:46:42 WARN Utils: Your hostname, administrador-Inspiron-3501 resolves to a loopback address: 127.0.1.1; using 10.18.6.197 instead (on interface wlp0s20f3)\n",
+      "24/10/04 10:46:42 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
+      "Setting default log level to \"WARN\".\n",
+      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
+      "24/10/04 10:46:43 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
+      "                                                                                \r"
+     ]
+    }
+   ],
    "source": [
     "spark = SparkSession.builder.appName(\"Analise Operacoes Creditarias\").getOrCreate()\n",
     "df = spark.read.parquet('data/trusted/df.parquet')"
@@ -91,23 +73,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = df.withColumn('vl_carteira_ativa', df['vl_carteira_ativa'].cast(DecimalType()))"
+    "df = df.withColumn('vl_carteira_ativa', df['vl_carteira_ativa'].cast(DoubleType()))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Stage 11:=======================================================>(64 + 1) / 65]\r"
+      "                                                                                \r"
      ]
     },
     {
@@ -117,16 +99,9 @@
       "+------------+-----+--------+-----+----------------+--------------------+-------------+-----------------+--------------------+-----------------+--------------------+------------+----------------------+-----------------------+------------------------------+--------------------------------+---------------------------------+---------------------------------+------------------------------+---------------------------+-----------------+---------------------------------+---------------------+\n",
       "|dt_data_base|ct_uf|  ct_tcb|ct_sr|ct_classificacao|         ct_ocupacao|ct_cnae_secao|ct_cnae_subclasse|            ct_porte|    ct_modalidade|           ct_origem|ct_indexador|nu_numero_de_operacoes|vl_a_vencer_ate_90_dias|vl_a_vencer_de_91_ate_360_dias|vl_a_vencer_de_361_ate_1080_dias|vl_a_vencer_de_1081_ate_1800_dias|vl_a_vencer_de_1801_ate_5400_dias|vl_a_vencer_acima_de_5400_dias|vl_vencido_acima_de_15_dias|vl_carteira_ativa|vl_carteira_inadimplida_arrastada|vl_ativo_problematico|\n",
       "+------------+-----+--------+-----+----------------+--------------------+-------------+-----------------+--------------------+-----------------+--------------------+------------+----------------------+-----------------------+------------------------------+--------------------------------+---------------------------------+---------------------------------+------------------------------+---------------------------+-----------------+---------------------------------+---------------------+\n",
-      "|  2021-07-31|   SP|Bancário|   S1|              PF|PF - Empregado de...|            -|                -|PF - Sem rendimen...|PF - Habitacional|Com destinação es...|  Pós-fixado|                120226|         2.8753078659E8|                7.8689169185E8|                 1.82821849141E9|                  1.49549961361E9|                  4.14969200769E9|                1.4263863827E9|              2.403629663E7|       9998255270|                   2.4219047797E8|       9.2235770698E8|\n",
+      "|  2024-07-31|   SP|Bancário|   S1|              PF|PF - Empregado de...|            -|                -|PF - Indisponível...|PF - Habitacional|Com destinação es...|  Pós-fixado|                287948|         9.5900365766E8|               2.62324683024E9|                 6.17760089202E9|                  5.14659628666E9|                1.536959816086E10|               7.57842209588E9|              5.098648901E7|3.790545441233E10|                   2.9233178823E8|      1.11943341443E9|\n",
       "+------------+-----+--------+-----+----------------+--------------------+-------------+-----------------+--------------------+-----------------+--------------------+------------+----------------------+-----------------------+------------------------------+--------------------------------+---------------------------------+---------------------------------+------------------------------+---------------------------+-----------------+---------------------------------+---------------------+\n",
       "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                \r"
      ]
     }
    ],
@@ -150,25 +125,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                \r"
+     "ename": "AnalysisException",
+     "evalue": "[UNRESOLVED_COLUMN.WITH_SUGGESTION] A column or function parameter with name `vl_media_carteira_ativa_por_operacao` cannot be resolved. Did you mean one of the following? [`vl_carteira_ativa`, `vl_a_vencer_ate_90_dias`, `vl_carteira_inadimplida_arrastada`, `vl_a_vencer_acima_de_5400_dias`, `vl_vencido_acima_de_15_dias`].;\n'Aggregate [ct_porte#8], [ct_porte#8, avg('vl_media_carteira_ativa_por_operacao) AS avg(vl_media_carteira_ativa_por_operacao)#188]\n+- Project [dt_data_base#0, ct_uf#1, ct_tcb#2, ct_sr#3, ct_classificacao#4, ct_ocupacao#5, ct_cnae_secao#6, ct_cnae_subclasse#7, ct_porte#8, ct_modalidade#9, ct_origem#10, ct_indexador#11, nu_numero_de_operacoes#12, vl_a_vencer_ate_90_dias#13, vl_a_vencer_de_91_ate_360_dias#14, vl_a_vencer_de_361_ate_1080_dias#15, vl_a_vencer_de_1081_ate_1800_dias#16, vl_a_vencer_de_1801_ate_5400_dias#17, vl_a_vencer_acima_de_5400_dias#18, vl_vencido_acima_de_15_dias#19, cast(vl_carteira_ativa#20 as double) AS vl_carteira_ativa#46, vl_carteira_inadimplida_arrastada#21, vl_ativo_problematico#22]\n   +- Relation [dt_data_base#0,ct_uf#1,ct_tcb#2,ct_sr#3,ct_classificacao#4,ct_ocupacao#5,ct_cnae_secao#6,ct_cnae_subclasse#7,ct_porte#8,ct_modalidade#9,ct_origem#10,ct_indexador#11,nu_numero_de_operacoes#12,vl_a_vencer_ate_90_dias#13,vl_a_vencer_de_91_ate_360_dias#14,vl_a_vencer_de_361_ate_1080_dias#15,vl_a_vencer_de_1081_ate_1800_dias#16,vl_a_vencer_de_1801_ate_5400_dias#17,vl_a_vencer_acima_de_5400_dias#18,vl_vencido_acima_de_15_dias#19,vl_carteira_ativa#20,vl_carteira_inadimplida_arrastada#21,vl_ativo_problematico#22] parquet\n",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAnalysisException\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[11], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m carteira_ativa_por_porte \u001b[38;5;241m=\u001b[39m \u001b[43mdf\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mgroupBy\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mct_porte\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43magg\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmean\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mvl_media_carteira_ativa_por_operacao\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      3\u001b[0m ordem_porte_df \u001b[38;5;241m=\u001b[39m spark\u001b[38;5;241m.\u001b[39mcreateDataFrame([(p,) \u001b[38;5;28;01mfor\u001b[39;00m p \u001b[38;5;129;01min\u001b[39;00m ordem_porte], [\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mct_porte\u001b[39m\u001b[38;5;124m'\u001b[39m])\n\u001b[1;32m      5\u001b[0m carteira_ativa_por_porte \u001b[38;5;241m=\u001b[39m ordem_porte_df\u001b[38;5;241m.\u001b[39mjoin(carteira_ativa_por_porte, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mct_porte\u001b[39m\u001b[38;5;124m'\u001b[39m, how\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mleft\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/pyspark/sql/group.py:186\u001b[0m, in \u001b[0;36mGroupedData.agg\u001b[0;34m(self, *exprs)\u001b[0m\n\u001b[1;32m    184\u001b[0m     \u001b[38;5;28;01massert\u001b[39;00m \u001b[38;5;28mall\u001b[39m(\u001b[38;5;28misinstance\u001b[39m(c, Column) \u001b[38;5;28;01mfor\u001b[39;00m c \u001b[38;5;129;01min\u001b[39;00m exprs), \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mall exprs should be Column\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    185\u001b[0m     exprs \u001b[38;5;241m=\u001b[39m cast(Tuple[Column, \u001b[38;5;241m.\u001b[39m\u001b[38;5;241m.\u001b[39m\u001b[38;5;241m.\u001b[39m], exprs)\n\u001b[0;32m--> 186\u001b[0m     jdf \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_jgd\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43magg\u001b[49m\u001b[43m(\u001b[49m\u001b[43mexprs\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_jc\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m_to_seq\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msession\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_sc\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m[\u001b[49m\u001b[43mc\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_jc\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mfor\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mc\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;129;43;01min\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mexprs\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m:\u001b[49m\u001b[43m]\u001b[49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    187\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m DataFrame(jdf, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39msession)\n",
+      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/py4j/java_gateway.py:1322\u001b[0m, in \u001b[0;36mJavaMember.__call__\u001b[0;34m(self, *args)\u001b[0m\n\u001b[1;32m   1316\u001b[0m command \u001b[38;5;241m=\u001b[39m proto\u001b[38;5;241m.\u001b[39mCALL_COMMAND_NAME \u001b[38;5;241m+\u001b[39m\\\n\u001b[1;32m   1317\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcommand_header \u001b[38;5;241m+\u001b[39m\\\n\u001b[1;32m   1318\u001b[0m     args_command \u001b[38;5;241m+\u001b[39m\\\n\u001b[1;32m   1319\u001b[0m     proto\u001b[38;5;241m.\u001b[39mEND_COMMAND_PART\n\u001b[1;32m   1321\u001b[0m answer \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mgateway_client\u001b[38;5;241m.\u001b[39msend_command(command)\n\u001b[0;32m-> 1322\u001b[0m return_value \u001b[38;5;241m=\u001b[39m \u001b[43mget_return_value\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m   1323\u001b[0m \u001b[43m    \u001b[49m\u001b[43manswer\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mgateway_client\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtarget_id\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mname\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   1325\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m temp_arg \u001b[38;5;129;01min\u001b[39;00m temp_args:\n\u001b[1;32m   1326\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mhasattr\u001b[39m(temp_arg, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m_detach\u001b[39m\u001b[38;5;124m\"\u001b[39m):\n",
+      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/pyspark/errors/exceptions/captured.py:185\u001b[0m, in \u001b[0;36mcapture_sql_exception.<locals>.deco\u001b[0;34m(*a, **kw)\u001b[0m\n\u001b[1;32m    181\u001b[0m converted \u001b[38;5;241m=\u001b[39m convert_exception(e\u001b[38;5;241m.\u001b[39mjava_exception)\n\u001b[1;32m    182\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(converted, UnknownException):\n\u001b[1;32m    183\u001b[0m     \u001b[38;5;66;03m# Hide where the exception came from that shows a non-Pythonic\u001b[39;00m\n\u001b[1;32m    184\u001b[0m     \u001b[38;5;66;03m# JVM exception message.\u001b[39;00m\n\u001b[0;32m--> 185\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m converted \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[1;32m    186\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m    187\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m\n",
+      "\u001b[0;31mAnalysisException\u001b[0m: [UNRESOLVED_COLUMN.WITH_SUGGESTION] A column or function parameter with name `vl_media_carteira_ativa_por_operacao` cannot be resolved. Did you mean one of the following? [`vl_carteira_ativa`, `vl_a_vencer_ate_90_dias`, `vl_carteira_inadimplida_arrastada`, `vl_a_vencer_acima_de_5400_dias`, `vl_vencido_acima_de_15_dias`].;\n'Aggregate [ct_porte#8], [ct_porte#8, avg('vl_media_carteira_ativa_por_operacao) AS avg(vl_media_carteira_ativa_por_operacao)#188]\n+- Project [dt_data_base#0, ct_uf#1, ct_tcb#2, ct_sr#3, ct_classificacao#4, ct_ocupacao#5, ct_cnae_secao#6, ct_cnae_subclasse#7, ct_porte#8, ct_modalidade#9, ct_origem#10, ct_indexador#11, nu_numero_de_operacoes#12, vl_a_vencer_ate_90_dias#13, vl_a_vencer_de_91_ate_360_dias#14, vl_a_vencer_de_361_ate_1080_dias#15, vl_a_vencer_de_1081_ate_1800_dias#16, vl_a_vencer_de_1801_ate_5400_dias#17, vl_a_vencer_acima_de_5400_dias#18, vl_vencido_acima_de_15_dias#19, cast(vl_carteira_ativa#20 as double) AS vl_carteira_ativa#46, vl_carteira_inadimplida_arrastada#21, vl_ativo_problematico#22]\n   +- Relation [dt_data_base#0,ct_uf#1,ct_tcb#2,ct_sr#3,ct_classificacao#4,ct_ocupacao#5,ct_cnae_secao#6,ct_cnae_subclasse#7,ct_porte#8,ct_modalidade#9,ct_origem#10,ct_indexador#11,nu_numero_de_operacoes#12,vl_a_vencer_ate_90_dias#13,vl_a_vencer_de_91_ate_360_dias#14,vl_a_vencer_de_361_ate_1080_dias#15,vl_a_vencer_de_1081_ate_1800_dias#16,vl_a_vencer_de_1801_ate_5400_dias#17,vl_a_vencer_acima_de_5400_dias#18,vl_vencido_acima_de_15_dias#19,vl_carteira_ativa#20,vl_carteira_inadimplida_arrastada#21,vl_ativo_problematico#22] parquet\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "Series([], Name: avg(vl_media_carteira_ativa_por_operacao), dtype: float64)"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
