--- a/old/iris-test-exploration.ipynb
+++ b/old/iris-test-exploration.ipynb
@@ -99,12 +99,7 @@
         }
       ],
       "source": [
-        "%pip install seaborn\n",
-        "%pip install matplotlib\n",
-        "%pip install pandas\n",
-        "%pip install numpy\n",
-        "%pip install scipy\n",
-        "%pip install sklearn"
+        "%pip install seaborn matplotlib pandas numpy sklearn"
       ]
     },
     {
@@ -131,8 +126,7 @@
         "import numpy as np\n",
         "import seaborn as sns\n",
         "import matplotlib.pyplot as plt\n",
-        "from scipy.stats import skew\n",
-        "from sklearn.datasets import load_iris\n"
+        "from sklearn.datasets import load_iris"
       ]
     },
     {
